--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "ios-xsmax": "react-native run-ios --simulator 'iPhone XS Max'",
     "ios-x": "react-native run-ios --simulator 'iPhone X'",
     "ios-6s": "react-native run-ios --simulator 'iPhone 6s'",
-    "ios-6": "react-native run-ios --simulator 'iPhone 6'"
+    "ios-6": "react-native run-ios --simulator 'iPhone 6'",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^6.0.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/core": "^6.0.1",
     "@react-navigation/devtools": "^6.0.1",
@@ -30,7 +32,8 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-status-bar-height": "^2.6.0",
-    "teaset": "^0.7.5"
+    "teaset": "^0.7.5",
+    "teaset-pro": "^0.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -40,6 +43,7 @@
     "eslint": "^7.32.0",
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.2",
+    "patch-package": "^6.4.7",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2"
   },
