--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "dayjs": "^1.10.7",
+    "mobx": "^6.3.6",
+    "mobx-react": "^7.2.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-device-info": "^8.3.3",
