--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/runtime": "^7.15.4",
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.2.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.2",
