--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ios-x": "react-native run-ios --simulator 'iPhone X'",
     "ios-6s": "react-native run-ios --simulator 'iPhone 6s'",
     "ios-6": "react-native run-ios --simulator 'iPhone 6'",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "openapi": "rm -rf src/api && node ./script/openapi.js"
   },
   "dependencies": {
     "@react-native-community/netinfo": "^6.0.2",
@@ -35,12 +36,19 @@
     "react-native-screens": "^3.7.2",
     "react-native-status-bar-height": "^2.6.0",
     "teaset": "^0.7.5",
-    "teaset-pro": "^0.8.6"
+    "teaset-pro": "^0.8.6",
+    "umi": "^3.5.35"
   },
   "devDependencies": {
+    "@ant-design/pro-cli": "^3.0.1",
     "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-decorators": "^7.20.0",
     "@babel/runtime": "^7.15.4",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@umijs/openapi": "^1.7.1",
+    "@umijs/plugin-esbuild": "^1.4.2",
+    "@umijs/plugin-openapi": "^1.3.3",
+    "@umijs/preset-react": "^2.1.6",
     "babel-jest": "^27.2.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
@@ -48,7 +56,8 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "patch-package": "^6.4.7",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "umi-preset-react-native": "^0.6.1"
   },
   "jest": {
     "preset": "react-native"
